Issue #342 - fixes vertical alignment in Manage Citations

--- a/src/app/shared/components/managecitations/managecitations.component.scss
+++ b/src/app/shared/components/managecitations/managecitations.component.scss
@@ -9,3 +9,9 @@ button {
 .modal-body{
     overflow-y: auto;
 }
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
